--- a/src/components/Sidebar/styles.module.css
+++ b/src/components/Sidebar/styles.module.css
@@ -8,17 +8,18 @@
 }
 
 .sidebar {
+    position: fixed;
+    top: 0%;
+    bottom: 0%;
+    height: 100vh;
+
     background-color: var(--light);
     border-right: 1px solid var(--dark);
 
-    min-height: 100vh;
-    height: auto;
     padding: 12px;
-
     
-    position: relative;
     transform: translateX(0);
-    transition: transform 250ms ease-in-out;
+    transition: transform .2s ease-in-out;
     z-index: 20;
 }
 
